All images in the images folder

--- a/businessAnalysis.html
+++ b/businessAnalysis.html
@@ -12,7 +12,7 @@
 <body>
     <div class="header_flexbox">
         <!-- picture of sky logo -->
-        <img src="transparent logo.webp" alt="sky logo" width="200px" height="100px" class="logo">
+        <img src="/images/transparent logo.webp" alt="sky logo" width="200px" height="100px" class="logo">
 
         <div class="Technophobes">
             <h3>Technophobes</h3>
@@ -36,11 +36,11 @@
             <h2 class="infoHeadings">How we applied our knowledge to the project:</h2>
             <ul style="font-size: 15pt;">
                 <li>Resource Audit to identify key resources we would use during our project: </li>
-                <img src="resource_audit.png" style="height: 20vw; width: 30vw;">
+                <img src="/images/resource_audit.png" style="height: 20vw; width: 30vw;">
                 <br>
                 <br>
                 <li>Stakeholder mapping:</li>
-                <img src="stakeholder_map.png" style="height: 20vw; width: 30vw;">
+                <img src="/images/stakeholder_map.png" style="height: 20vw; width: 30vw;">
                 <li>JavaScript is used to add the functionality to the website</li>
             </ul>
             <h3 class="infoHeadings">HTML was used as follows:</h3>
@@ -73,7 +73,7 @@
         </div>
 
         <div class="images">
-            <img class="img" src="ba.png" alt="">  
+            <img class="img" src="/images/ba.png" alt="">  
             <img class="img" src="https://web-dev.imgix.net/image/VbAJIREinuYvovrBzzvEyZOpw5w1/hFR4OOwyH5zWc5XUIcyu.svg" alt="">  
             <img class="img" id="jsFunction" src="https://www.programiz.com/sites/tutorial2program/files/javascript-return-statement.png" alt="" background-color:white>   
         </div>
