--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <div class="header_flexbox">
         <!-- picture of sky logo -->
-        <a href="/index.html"><img src="transparent logo.webp" alt="sky logo" width="200px" height="100px" class="logo"></a>
+        <a href="/index.html"><img src="/images/transparent logo.webp" alt="sky logo" width="200px" height="100px" class="logo"></a>
 
         <div class="Technophobes">
             <h3>Technophobes</h3>
