--- a/resources_page.html
+++ b/resources_page.html
@@ -15,7 +15,7 @@
 <style>
 
     body{
-        background-image: url("sky_background2.jpeg");
+        background-image: url("/images/sky_background2.jpeg");
         background-size: cover;
         background-repeat: no-repeat;
         background-attachment: fixed;
@@ -111,7 +111,7 @@
     }
 
     .Page_Footer {
-    background-image: url("sky_background2.jpeg");
+    background-image: url("/images/sky_background2.jpeg");
     color: white;
     text-align: center;
     padding-top: 2px;
@@ -184,7 +184,7 @@
 }
 
 .Page_Footer {
-    background-image: url("sky_background2.jpeg");
+    background-image: url("/images/sky_background2.jpeg");
     color: white;
     text-align: center;
     padding: 5px;
@@ -237,7 +237,7 @@ li {
     <header>
         <div class="header_flexbox">
             <!-- picture of sky logo -->
-            <a href="/index.html"><img src="transparent logo.webp" alt="sky logo" width="200px" height="100px" class="logo"></a>
+            <a href="/index.html"><img src="/images/transparent logo.webp" alt="sky logo" width="200px" height="100px" class="logo"></a>
 
             <div class="Technophobes">
                 <h3>Technophobes</h3>
