--- a/aboutUs.html
+++ b/aboutUs.html
@@ -26,7 +26,7 @@
 </style>
 <body>
     <div class="header_flexbox">
-        <a href="/index.html"><img src="transparent logo.webp" alt="sky logo" width="200px" height="100px" class="logo"></a>
+        <a href="/index.html"><img src="/images/transparent logo.webp" alt="sky logo" width="200px" height="100px" class="logo"></a>
         <div class="Technophobes">
             <h3>Technophobes</h3>
         </div>
