changes applied for improving the layout

--- a/businessAnalysis.html
+++ b/businessAnalysis.html
@@ -21,10 +21,9 @@
 
     <div id="pages">
         <ul id="pageList">
-            <li class="otherPages" id="aboutUs">About Us</li>
-            <li class="otherPages"  id="help">Help</li>
-            <li class="otherPages" id="privacy">Privacy</li>
-            <li class="otherPages" id="legal">Legal</li> 
+            <li class="otherPages" id="aboutUs"><a href="aboutUs.html" class="nav">About Us</a></li>
+            <li class="otherPages"  id="resources"><a href="resources_page.html" class="nav">Resources</a></li>
+            <li class="otherPages" id="legalPrivacy"><a href="legal_page.html" class="nav">Legal & Privacy</a></li>
         </ul>
     </div>
     <h1>Business Analysis</h1>
