--- a/python_flask.html
+++ b/python_flask.html
@@ -218,14 +218,13 @@
     .images {
         margin-left: 50vw;
         margin-top: -90vw;
-        
         /* border-radius: 20px;
         border-style: solid;
         border-color: #0072c9; */
         overflow: hidden;
        
         width: 30vw;
-        padding: 100px;
+        padding: 200px;
 
     }
 
@@ -293,7 +292,7 @@
         <h1 style="margin-top: 2vw;">Python Programming & Flask</h1>
         <p class="intro_text">Python is an object oriented programming language. Flask is a Python web framework that allows you to create web applications. It makes the creation of websites scalable. </p>
 
-<div classa="together">
+<div class="together">
     <div class="main_flexbox">
         <!-- Application of knowledge -->
         <div style="width: 50%" class="textbox1" >
@@ -361,7 +360,7 @@
             <div class="img-caption">
                 <p style="margin-left: 0px; margin-right: 5px; font-size: 15pt;">How the Flask framework works</p>
             </div> -->
-            <img src="/images/flask_screenshot.png" alt = "screenshot of code" class="screenshots" style="height: 400px; width: 750px; margin-top: 3vw;">
+            <img src="/images/flask_screenshot.png" alt = "screenshot of code" class="screenshots" style="height: 400px; width: 600px; margin-top: 3vw;">
             <div class="img-caption">
                 <p style="margin-left: 0px; margin-right: 5px; font-size: 15pt;">How the Flask framework was used in building this website</p>
             </div>
