--- a/webDev.html
+++ b/webDev.html
@@ -14,7 +14,7 @@
 <body>
     <div class="header_flexbox">
         <!-- picture of sky logo -->
-        <a href="/index.html"><img src="/images/transparent logo.webp" alt="sky logo" width="100px" height="60px" class="logo"></a>
+        <a href="/index.html"><img src="/images/transparent logo.webp" alt="sky logo" width="200px" height="100px" class="logo"></a>
 
         <div class="Technophobes">
             <h3>Technophobes</h3>
@@ -62,19 +62,21 @@
                 <li>Loops are blocks that can repeat a portion of code a specified amount of times, and these are expressed in the form of a "for" or a "while" statement</li>
                 <li>Functions are a useful part of JS Programming that allows for a block of code to be repeated when a defined function has been called within the program</li>
             </ul>
-            <h3 class="infoHeadings">Descriptions for each of the images are shown below</h3>
-            <p> The number for each description corresponds with the image number going from the top to the bottom.</p>
-            <ol>
-                <li>This shows the general format of a HTML element, where there is an opening tag, a closing tag, and then the content for the tag.</li>
-                <li>The format for applying CSS is as shown, where the selector wraps the different properties that will style the element</li>
-                <li>A function is a key part of javascript programming which allows for a block of code to be executed at different parts of a program.</li>
-            </ol>
         </div>
 
         <div class="images">
-            <img class="img" src="https://cdo-curriculum.s3.amazonaws.com/media/uploads/html_element.png" alt="">  
+            <img class="img" src="https://cdo-curriculum.s3.amazonaws.com/media/uploads/html_element.png" alt=""> 
+            <div class="imgText">
+                <h2>This is the General Format for a CSS Selector, where a opening and closing tag encase the content of the element.</h2>
+            </div>
             <img class="img" src="https://web-dev.imgix.net/image/VbAJIREinuYvovrBzzvEyZOpw5w1/hFR4OOwyH5zWc5XUIcyu.svg" alt="">  
+            <div class="imgText">
+                <h2>The format for applying CSS is as shown, where the selector wraps the different properties that will style the element.</h2>
+            </div>
             <img class="img" id="jsFunction" src="https://www.programiz.com/sites/tutorial2program/files/javascript-return-statement.png" alt="" background-color:white>   
+            <div class="imgText">
+                <h2>A function is a key part of javascript programming which allows for a block of code to be executed at different parts of a program.</h2>
+            </div>
         </div>
     </div>
 
